--- a/default-config.json
+++ b/default-config.json
@@ -15,6 +15,12 @@
                             "max": 100,
                             "min": 0,
                             "default": 80
+                        },
+                        {
+                            "key": "theme",
+                            "hide": true,
+                            "reset": true,
+                            "default": "Linux"
                         }
                     ]
                 }
