--- a/default-config.json
+++ b/default-config.json
@@ -2,36 +2,36 @@
     "groups": [
         {
             "key": "basic",
-            "name": "基础设置",
+            "name": "Basic",
             "groups": [
                 {
                     "key": "interface",
-                    "name": "界面",
+                    "name": "Interface",
                     "options": [
                         {
-                            "key": "opacity",
-                            "name": "透明度",
+                            "key": "Opacity",
+                            "name": "Opacity",
                             "type": "slider",
                             "max": 100,
                             "min": 0,
-                            "default": 95
+                            "default": 90
                         },
                         {
-                            "key": "family",
-                            "name": "字体",
+                            "key": "Family",
+                            "name": "Family",
                             "type": "fontcombobox",
                             "default": "Noto Mono"
                         },
                         {
-                            "key": "size",
-                            "name": "字体大小",
+                            "key": "FontSize",
+                            "name": "FontSize",
                             "type": "spinbutton",
                             "default": 11,
                             "max": 50,
                             "min": 8
                         },
                         {
-                            "key": "theme",
+                            "key": "Theme",
                             "hide": true,
                             "reset": true,
                             "default": "Linux"
@@ -42,58 +42,63 @@
         },
         {
             "key": "shortcuts",
-            "name": "快捷键",
+            "name": "Shortcuts",
             "groups": [
                 {
                     "key" : "terminal",
-                    "name" : "终端",
+                    "name" : "Terminal",
                     "options" : [
                         {
-                            "key": "copy",
-                            "name": "复制",
+                            "key": "Copy",
+                            "name": "Copy",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shfit+C"
+                            "default":  "Ctrl+Shift+C"
                         },
                         {
-                            "key": "paste",
-                            "name": "粘贴",
+                            "key": "Paste",
+                            "name": "Paste",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shfit+V"
+                            "default":  "Ctrl+Shift+V"
                         },
                         {
-                            "key": "zoom_in",
-                            "name": "放大",
+                            "key": "Search",
+                            "name": "Search",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+F"
+                        },
+                        {
+                            "key": "ZoomIn",
+                            "name": "ZoomIn",
                             "type": "shortcut",
                             "default":  "Ctrl+="
                         },
                         {
-                            "key": "zoom_out",
-                            "name": "缩小",
+                            "key": "ZoomOut",
+                            "name": "ZoomOut",
                             "type": "shortcut",
                             "default":  "Ctrl+-"
                         },
                         {
-                            "key": "DefaultFontSize",
-                            "name": "默认大小",
+                            "key": "DefaultSize",
+                            "name": "DefaultSize",
                             "type": "shortcut",
                             "default":  "Ctrl+0"
                         },
                         {
                             "key": "SkipToNextCommand",
-                            "name": "跳转到下一个命令",
+                            "name": "SkipToNextCommand",
                             "type": "shortcut",
                             "default":  "Shift+Down"
                         },
                         {
                             "key": "SkipToPreCommand",
-                            "name": "跳转到上一个命令",
+                            "name": "SkipToPreCommand",
                             "type": "shortcut",
                             "default":  "Shift+Up"
-                        }
-                        ,
+                        },
                         {
                             "key": "SelectAll",
-                            "name": "全选",
+                            "name": "SelectAll",
                             "type": "shortcut",
                             "default":  "Ctrl+Shift+a"
                         }
@@ -101,95 +106,113 @@
                 },
                 {
                     "key" : "workspace",
-                    "name" : "工作区",
+                    "name" : "Workspace",
                     "options" : [
                         {
-                            "key": "new_tab",
-                            "name": "新建工作区",
+                            "key": "NewWorkspace",
+                            "name": "NewWorkspace",
                             "type": "shortcut",
                             "default":  "Ctrl+Shift+T"
                         },
                         {
-                            "key": "vertical_split",
-                            "name": "纵向分屏",
+                            "key": "CloseWorkspace",
+                            "name": "CloseWorkspace",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shfit+H"
+                            "default":  "Ctrl+Alt+W"
                         },
                         {
-                            "key": "horizontal_split",
-                            "name": "横向分屏",
+                            "key": "PreWorkspace",
+                            "name": "PreWorkspace",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shfit+J"
+                            "default":  "Ctrl+Tab"
                         },
                         {
-                            "key": "focus_nav_up",
-                            "name": "选择上面的窗口",
+                            "key": "NextWorkspace",
+                            "name": "NextWorkspace",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+Tab"
+                        },
+                        {
+                            "key": "VerticalSplit",
+                            "name": "VerticalSplit",
+                            "type": "shortcut",
+                            "default":  "Ctrl+Shift+H"
+                        },
+                        {
+                            "key": "HorizontalSplit",
+                            "name": "HorizontalSplit",
+                            "type": "shortcut",
+                            "default":  "Ctrl+H"
+                        },
+                        {
+                            "key": "FocusNavUp",
+                            "name": "FocusNavUp",
                             "type": "shortcut",
                             "default":  "Alt+K"
                         },
                         {
-                            "key": "focus_nav_down",
-                            "name": "选择下面的窗口",
+                            "key": "FocusNavDown",
+                            "name": "FocusNavDown",
                             "type": "shortcut",
                             "default":  "Alt+J"
                         },
                         {
-                            "key": "focus_nav_left",
-                            "name": "选择左面的窗口",
+                            "key": "FocusNavLeft",
+                            "name": "FocusNavLeft",
                             "type": "shortcut",
                             "default":  "Alt+H"
                         },
                         {
-                            "key": "focus_nav_right",
-                            "name": "选择右面的窗口",
+                            "key": "FocusNavRight",
+                            "name": "FocusNavRight",
                             "type": "shortcut",
                             "default":  "Alt+L"
                         },
                         {
-                            "key": "CloseTab",
-                            "name": "关闭窗口",
+                            "key": "CloseWindow",
+                            "name": "CloseWindow",
                             "type": "shortcut",
-                            "default":  "Ctrl+Alt+q"
+                            "default":  "Ctrl+Q"
                         },
                         {
-                            "key": "CloseOtherTab",
-                            "name": "关闭其它的窗口",
+                            "key": "CloseOtherWindows",
+                            "name": "CloseOtherWindows",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shfit+q"
+                            "default":  "Ctrl+Shift+Q"
                         }
                     ]
                 },
                 {
                     "key" : "advanced",
-                    "name" : "高级设置",
+                    "name" : "Advanced",
                     "options" : [
                         {
-                            "key": "fullscreen",
-                            "name": "全屏",
+                            "key": "FullScreen",
+                            "name": "FullScreen",
                             "type": "shortcut",
                             "default":  "F11"
                         },
                         {
-                            "key": "rename_tab",
-                            "name": "重命名标题",
+                            "key": "RenameTab",
+                            "name": "RenameTab",
                             "type": "shortcut",
                             "default":  "F2"
                         },
                         {
                             "key": "ShowShortCut",
-                            "name": "显示快捷键",
+                            "name": "ShowShortCut",
                             "type": "shortcut",
-                            "default":  "Ctrl+Shfit+?"
+                            "default":  "Ctrl+Shift+?"
                         },
                         {
                             "key": "CustomCommand",
-                            "name": "自定义命令",
+                            "name": "CustomCommand",
                             "type": "shortcut",
                             "default":  "Ctrl+["
                         },
                         {
                             "key": "RemoteManager",
-                            "name": "远程管理",
+                            "name": "RemoteManager",
                             "type": "shortcut",
                             "default":  "Ctrl+/"
                         }
@@ -199,77 +222,77 @@
         },
         {
             "key": "advanced",
-            "name": "高级设置",
+            "name": "Advanced",
             "groups": [
                 {
                     "key": "cursor",
-                    "name": "光标",
+                    "name": "Cursor",
                     "options": [
                         {
-                            "key": "shape",
-                            "name": "光标风格",
+                            "key": "Shape",
+                            "name": "Shape",
                             "type": "buttongroup",
                             "items": ["█","_","|"],
                             "default": 0,
                             "i18n_skip_keys": ["items"]
                         },
                         {
-                            "key": "blink",
+                            "key": "Blink",
                             "type": "checkbox",
-                            "text": "光标闪烁",
+                            "text": "Blink",
                             "default": true
                         },
                         {
                             "key": "AutoHide",
                             "type": "checkbox",
-                            "text": "光标自动隐藏",
+                            "text": "AutoHide",
                             "default": false
                         },
                         {
                             "key": "AutoCopy",
                             "type": "checkbox",
-                            "text": "选中文字时自动复制到剪切板",
+                            "text": "AutoCopy",
                             "default": true
                         }
                     ]
                 },
                 {
                     "key": "scroll",
-                    "name": "滚动",
+                    "name": "Scroll",
                     "options": [
                         {
                             "key": "PressingScroll",
                             "type": "checkbox",
-                            "text": "按键时滚动",
+                            "text": "PressingScroll",
                             "default": true
                         },
                         {
                             "key": "OutputtingScroll",
                             "type": "checkbox",
-                            "text": "输出时滚动",
+                            "text": "OutputtingScroll",
                             "default": true
                         }
                     ]
                 },
                 {
                     "key": "window",
-                    "name": "窗口",
+                    "name": "Window",
                     "options": [
                         {
-                            "key": "windowstate",
-                            "name": "窗口状态",
+                            "key": "WindowState",
+                            "name": "WindowState",
                             "type": "combobox",
                             "default": "window_normal"
                         },
                         {
-                            "key": "blur_background",
-                            "text": "背景模糊",
+                            "key": "BlurredBackground",
+                            "text": "BlurredBackground",
                             "type": "checkbox",
                             "default": "false"
                         },
                         {
                             "key": "HideRaytheonWindow",
-                            "text": "丢失焦点后隐藏雷神窗口",
+                            "text": "HideRaytheonWindow",
                             "type": "checkbox",
                             "default": "false"
                         }
