--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,7 @@ set(SRCS
     lib/ScreenWindow.cpp
     lib/SearchBar.cpp
     lib/Session.cpp
+    lib/SessionManager.cpp
     lib/ShellCommand.cpp
     lib/TerminalCharacterDecoder.cpp
     lib/TerminalDisplay.cpp
@@ -91,6 +92,7 @@ set(HDRS
     lib/ScreenWindow.h
     lib/SearchBar.h
     lib/Session.h
+    lib/SessionManager.h
     lib/TerminalDisplay.h
     lib/Vt102Emulation.h
 )
@@ -104,6 +106,13 @@ set(HDRS_DISTRIB
     lib/qtermwidget.h
     lib/Emulation.h
     lib/Filter.h
+    lib/Session.h
+    lib/SessionManager.h
+    lib/History.h
+    lib/BlockArray.h
+    lib/Character.h
+    lib/CharacterColor.h
+    lib/TerminalDisplay.h
 )
 
 # dirs
@@ -197,11 +206,6 @@ target_compile_definitions(${QTERMWIDGET_LIBRARY_NAME}
         "TRANSLATIONS_DIR=\"${TRANSLATIONS_DIR}\""
         "HAVE_POSIX_OPENPT"
         "HAVE_SYS_TIME_H"
-        "QT_USE_QSTRINGBUILDER"
-        "QT_NO_CAST_FROM_ASCII"
-        "QT_NO_CAST_TO_ASCII"
-        "QT_NO_URL_CAST_FROM_STRING"
-        "QT_NO_CAST_FROM_BYTEARRAY"
 )
 
 
